--- a/Templates/admin_approve.html
+++ b/Templates/admin_approve.html
@@ -1,12 +1,11 @@
-<script src="<TMPL_VAR site_url>/js/jquery.bxslider.min.js"></script>
-<link rel="stylesheet" type="text/css" href="<TMPL_VAR site_url>/css/jquery.bxslider.css"/>
+<script src="<TMPL_VAR site_url>/js/selall.js"></script>
 
 <form action="">
 	<input type="hidden" name="op" value="admin_approve">
    <input type="hidden" name="token" value="<TMPL_VAR token>">
 	<table class="tbl1" style="width: 1024px">
 	<tr class="hdr">
-	   <td><input type="checkbox" name="file_id"></td>
+	   <td><input type="checkbox" name="file_id" class="selall"></td>
 	   <td>Filename</td>
 	   <td>Thumbnails</td>
 	   <td>Uploaded by</td>
