--- a/Templates/admin_cdn_form.html
+++ b/Templates/admin_cdn_form.html
@@ -1,5 +1,5 @@
 <Form method="POST" onSubmit="return checkForm(this)">
-<input type="hidden" name="op" value="admin_server_save">
+<input type="hidden" name="op" value="admin_server_add">
 <input type="hidden" name="token" value="<TMPL_VAR token>">
 <input type="hidden" name="srv_id" value="<TMPL_VAR srv_id>">
 <input type="hidden" name="srv_ip" value="0.0.0.0">
