--- a/Templates/admin_downloads.html
+++ b/Templates/admin_downloads.html
@@ -22,7 +22,7 @@ Downloader IP: <input type="text" name="ip" value="<TMPL_VAR ip>" size=15><br>
         (<TMPL_VAR percent> %)
     </TD></TMPL_IF>
     <TD align=left><TMPL_VAR referer></TD>
-    <TD align=center><TMPL_IF status><TMPL_VAR status><TMPL_ELSE>Payed</TMPL_IF></TD>
+    <TD align=center><TMPL_VAR status></TD>
 </TR>
 </TMPL_LOOP>
 </Table>
