--- a/Templates/admin_external_stats.html
+++ b/Templates/admin_external_stats.html
@@ -3,6 +3,7 @@
 <Form>
 <input type="hidden" name="op" value="admin_external">
 <input type="hidden" name="stats" value="<TMPL_VAR key_id>">
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 From <input type="text" class="date" name="date1" value="<TMPL_VAR date1>" size=10> to <input type="text" class="date" name="date2" value="<TMPL_VAR date2>" size=10>
 <input type="submit" name="show" value="Show">
 </Form>
