--- a/Templates/admin_payments.html
+++ b/Templates/admin_payments.html
@@ -1,8 +1,6 @@
 <h2><TMPL_VAR lang_adm_payments></h2>
-<br>
-<a href="?op=admin_ipn_logs">IPN Logs</a>
-<br><br>
-<TMPL_IF msg><font class="ok"><TMPL_VAR msg></font><br><br></TMPL_IF>
+<a href="<TMPL_VAR site_url>/?op=admin_payments&history=1">History</a>
+<TMPL_IF msg><br><font class="ok"><TMPL_VAR msg></font><br></TMPL_IF>
 <Form method="POST">
 <input type="hidden" name="op" value="admin_payments">
 <input type="hidden" name="token" value="<TMPL_VAR token>">
@@ -13,9 +11,9 @@
     <TD><input type="checkbox" onClick="if(!this.form.pay_id)return false;for(i=0;i<this.form.pay_id.length;i++){this.form.pay_id[i].checked=this.checked;}if(this.form.pay_id.value)this.form.pay_id.checked=this.checked;"></TD>
     <TD><TMPL_VAR lang_username></TD>
     <TD><TMPL_VAR lang_amount></TD>
-    <TD>Email</TD>
-    <TD>Payout system</TD>
-    <TD>Payment Info</TD>
+    <TD><TMPL_VAR lang_identifier></TD>
+    <TD><TMPL_VAR lang_payout_system></TD>
+    <TD><TMPL_VAR lang_payment_info></TD>
     <TD><TMPL_VAR lang_date></TD>
 </TR>
 <TMPL_LOOP list>
@@ -30,8 +28,8 @@
 </TR>
 </TMPL_LOOP>
 <TR class="hdr"><TD colspan=2></TD><TD><TMPL_VAR currency_symbol><TMPL_VAR amount_sum></TD><TD colspan=4></TD></TR>
-<TR class="hdr"><TD colspan=7 style="text-align:left;"><input type="submit" name="mark_paid" value="Mark selected as Paid" class="" style="background-color:#99CC99;"> &nbsp; <input type="submit" name="mark_rejected" value="Mark selected as Rejected" class="" style="background-color:#CC9999;" onClick="var x=prompt('Do you want to delete the selected payment?"','');if(typeof(x)=='undefined'||x==null)return false;this.form.reject_info.value=x;"></TD></TR>
-<TR class="hdr"><TD colspan=7 style="text-align:left;"><input type="submit" name="export_file" value="Export selected as PayPal Mass Payment file" class=""></TD></TR>
+<TR class="hdr"><TD colspan=7 style="text-align:left;"><input type="submit" name="mark_paid" value="<TMPL_VAR lang_mark_paid>" class="" style="background-color:#99CC99;"> &nbsp; <input type="submit" name="mark_rejected" value="<TMPL_VAR lang_mark_rejected>" class="" style="background-color:#CC9999;"></TD></TR>
+<TR class="hdr"><TD colspan=7 style="text-align:left;"><input type="submit" name="export_file" value="<TMPL_VAR lang_mass_payment>" class=""></TD></TR>
 </Table>
 </Form>
 <style>
