--- a/Templates/ask_email.html
+++ b/Templates/ask_email.html
@@ -1,4 +1,4 @@
-         <div id="ask-email" class="hide" title="Enter your e-mail...">
+         <div id="ask-email" class="hide2" title="Enter your e-mail...">
             <p>Your e-mail: <input type="email" name="email"></p>
             <br><br>
             <p><small>Note: Your new account data will be sent to specified address. Please note that it may take up to several minutes to proceed.</small></p>
