--- a/Templates/contact.html
+++ b/Templates/contact.html
@@ -1,3 +1,4 @@
+
 <Script type="text/javascript">
 function CheckForm(f)
 {
@@ -17,20 +18,22 @@ function CheckForm(f)
 <p><TMPL_VAR lang_contact_1> <a href="faq.html">FAQ</a> <TMPL_VAR lang_and_our> <a href="tos.html"><TMPL_VAR lang_terms_of_service></a> <TMPL_VAR lang_contact_2>.</p>
 <br>
 <Form method="post" action="<TMPL_VAR site_url>/" onSubmit="return CheckForm(this);">
-<input type="hidden" name="op" value="contact_send">
+<input type="hidden" name="op" value="contact">
 <input type="hidden" name="token" value="<TMPL_VAR token>">
 <input type="hidden" name="rand" value="<TMPL_VAR rand>">
-<table border=0>
+<table border=0 width="600">
 <tr><td><TMPL_VAR lang_name>:</td><td><input type="text" name="name" value="<TMPL_VAR name>" maxlength=32 style="width: 99%"></td></tr>
 <tr><td><TMPL_VAR lang_email>:</td><td><input type="text" name="email" value="<TMPL_VAR email>" size=24 maxlength=32 style="width: 99%"></td></tr>
-<tr><td colspan="2"><textarea name="message" rows=7 cols=24 style="width:300px"><TMPL_VAR message></textarea></td></tr>
+<tr><td colspan="2" class="editor"><textarea id="message" name="message" rows=7 style="width: 100%"><TMPL_VAR message></textarea></td></tr>
 
 <TMPL_IF ihtml>
 <tr><td colspan=2 align=center><TMPL_VAR ihtml></td></tr>
 </TMPL_IF>
 
-<tr><td colspan=2 align=center><font class="err"><TMPL_VAR msg></font><br><input name="submit_message" type="submit" name="btn" value="<TMPL_VAR lang_send_message>"></td></tr>
+<tr><td colspan=2 align=center><font class="err"><TMPL_VAR msg></font><br><input name="send" type="submit" name="btn" value="<TMPL_VAR lang_send_message>"></td></tr>
 </table>
 </Form>
 
 </div>
+
+<TMPL_INCLUDE nic_edit.html>
