--- a/Templates/my_files_deleted.html
+++ b/Templates/my_files_deleted.html
@@ -1,4 +1,4 @@
-<input type="button" value="Hide current deleted files" onclick="window.location='?op=my_files_deleted&hide=1'">
+<input type="button" value="Hide current deleted files" onclick="window.location='?op=my_files_deleted&hide=1&token=<TMPL_VAR token>'">
 
 <br><br>
 
