--- a/Templates/splash.html
+++ b/Templates/splash.html
@@ -1,7 +1,7 @@
 	<div id="content" style="width: 980px">
 		<div class="container" style="position: relative;top: 50%; transform: translateY(15%)">
 				<div class="prompic" style="">
-					<a href="<TMPL_VAR site_url>/?op=upload">
+					<a href="<TMPL_VAR site_url>/?op=upload_form">
 						<div class="col">
 							<div class="pheader">
 								<span><img src="<TMPL_VAR site_url>/images/icon_upload_blue.png"></span>
@@ -14,7 +14,7 @@
 				</a>
 				</div>	
 			<div class="splashbar promsign">
-				<a href="<TMPL_VAR site_url>/?op=registration">
+				<a href="<TMPL_VAR site_url>/register.html">
 					<div class="col">
 						<div class="pheader">
 							<span><img src="<TMPL_VAR site_url>/images/icon_sup_blue.png"></span>
@@ -27,7 +27,7 @@
 				</a>
 			</div>
 			<div class="splashbar promprofit">
-				<a href="<TMPL_VAR site_url>/?op=registration">
+				<a href="<TMPL_VAR site_url>/register.html">
 					<div class="col">
 						<div class="pheader">
 							<span><img src="<TMPL_VAR site_url>/images/icon_profit_blue.png"></span>
