--- a/Templates/user_public.html
+++ b/Templates/user_public.html
@@ -35,6 +35,8 @@
       target: '#folders_list',
       perpage: '<TMPL_VAR per_page>',
       fld_id: '<TMPL_VAR fld_id>',
+      load_folders_list: '1',
+      token: '<TMPL_VAR token>',
    });
    setPagination('.files_paging',
    {
@@ -45,6 +47,8 @@
       target: '#files_list',
       perpage: '<TMPL_VAR per_page>',
       fld_id: '<TMPL_VAR fld_id>',
+      load_files_list: '1',
+      token: '<TMPL_VAR token>',
    });
 </script>
 <style>
