--- a/Templates/admin_mass_email.html
+++ b/Templates/admin_mass_email.html
@@ -1,22 +1,31 @@
 <h2>Send mass e-mail to users</h2>
-<Form method="POST">
+<Form method="POST" onSubmit="saveEditorContent('msg_text');">
 <input type="hidden" name="op" value="admin_mass_email">
-<input type="hidden" name="token" value="<TMPL_VAR token>">
+<input type="hidden" name="token" value="<TMPL_VAR token_mass_email>">
 <Table class="tbl1" cellpadding=2 cellspacing=1>
 <TMPL_IF users>
 <TR><TD align=right><b>Filter</b></TD><TD>
 <TMPL_VAR users_num> selected users
 <TMPL_ELSE>
 <TR><TD align=right rowspan="2"><b>Filter</b></TD><TD>
-<input type="radio" id="filter_utype_all" name="filter_utype" value="all" checked> <label for="filter_utype_all">All</label>
-<input type="radio" id="filter_utype_prem" name="filter_utype" value="prem"> <label for="filter_utype_prem">Premium</label>
-<input type="radio" id="filter_utype_free" name="filter_utype" value="free"> <label for="filter_utype_free">Free</label>
+Status:
+<select name="status" onchange="status_changed(this)">
+<option>--</option>
+<option value="adm"<TMPL_IF search_status_adm> selected</TMPL_IF>>Admin</option>
+<option value="aff_enabled"<TMPL_IF search_status_aff_enabled> selected</TMPL_IF>>Affiliate</option>
+<option value="dmca_agent"<TMPL_IF search_status_dmca_agent> selected</TMPL_IF>>DMCA agent</option>
+<option value="mod"<TMPL_IF search_status_mod> selected</TMPL_IF>>Moderator</option>
+<option value="free"<TMPL_IF search_status_free> selected</TMPL_IF>>Free</option>
+<option value="premium"<TMPL_IF search_status_premium> selected</TMPL_IF>>Premium</option>
+<option value="reseller"<TMPL_IF search_status_reseller> selected</TMPL_IF>>Reseller</option>
+<option value="pending"<TMPL_IF search_status_pending> selected</TMPL_IF>>Pending</option>
+</select>
 </TD></TR><TR><TD>
-Logged in last <input type="text" name="filter_lastlogin" size="1"> days
+Logged in last <input type="text" id="filter_lastlogin" name="filter_lastlogin" size="1"> days
 </TD></TR>
 </TMPL_IF>
 <TR><TD align=right><b>Subject</b></TD><TD><input type="text" name="subject" size=36></TD></TR>
-<TR><TD align=right><b>Text message</b></TD><TD><Textarea name="body" cols=42 rows=7></Textarea>
+<TR class="editor"><TD align=right><b>Text message</b></TD><TD><Textarea id="msg_text" name="body" cols=80 rows=7></Textarea>
 <br>Use <b>%username%</b> to insert login into message
 <br>Use <b>%unsubscribe_url%</b> to insert Unsubscription URL into message
 </TD></TR>
@@ -27,3 +36,16 @@ Logged in last <input type="text" name="filter_lastlogin" size="1"> days
 <input type="submit" name="send" value=" Send e-mails ">
 </Form>
 <br><br>
+
+<script>
+function status_changed(element)
+{
+   document.querySelector('#filter_lastlogin').disabled = element.value == 'pending';
+}
+</script>
+
+<TMPL_INCLUDE nic_edit.html>
+
+<script>
+nicedit.panelInstance('msg_text');
+</script>
