--- a/Templates/admin_servers.html
+++ b/Templates/admin_servers.html
@@ -1,11 +1,14 @@
-<h2>Servers management</h2>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap.min.js"></script>
+
+<h2><TMPL_VAR lang_servers_management></h2>
 
 <TMPL_IF warnings>
 <span class="err" style="background:#ffc;padding:7px;"><TMPL_VAR warnings></span><br><br>
 </TMPL_IF>
 
 <br>
-<a href="<TMPL_VAR site_url>/?op=admin_transfer_list">Transfer queue</a>
+<a href="<TMPL_VAR site_url>/?op=admin_transfer_list"><TMPL_VAR lang_transfer_queue></a>
 
 <br><br>
 <TMPL_IF msg><b class="ok"><TMPL_VAR msg></b><br><br></TMPL_IF>
@@ -37,58 +40,171 @@
 <TD><a href="?op=admin_files&srv_id=<TMPL_VAR srv_id>"><TMPL_VAR srv_files></a></TD>
 <TD align=left><b><TMPL_VAR srv_disk_percent>%</b> (<TMPL_VAR srv_disk> <TMPL_VAR lang_of> <TMPL_VAR srv_disk_max> Gb)</TD>
 <TD><TMPL_VAR srv_ip></TD>
-<TD><a href="?op=admin_server_del&srv_id=<TMPL_VAR srv_id>" onClick="return confirm('WARNING: Delete server and all its files?')"><img src="<TMPL_VAR site_url>/images/icon_delete.png" border=0></a></TD>
+<TD><a href="?op=admin_servers&delete=1&srv_id=<TMPL_VAR srv_id>&token=<TMPL_VAR token>" onClick="return confirmServerDeletion(this.href, '<TMPL_VAR srv_name>');"><img src="<TMPL_VAR site_url>/images/icon_delete.png" border=0></a></TD>
 <TD><a href="?op=admin_server_import&srv_id=<TMPL_VAR srv_id>"><TMPL_VAR lang_import_files></a></TD>
 </TR>
 </TMPL_LOOP>
 <TR><TD colspan=10>
-<input type="submit" name="admin_update_srv_stats" value="<TMPL_VAR lang_update_srv_stats>" class="">
+<input type="submit" id="update_srv_stats" name="update_srv_stats" value="<TMPL_VAR lang_update_srv_stats>" class="">
 </TD></TR>
 </Table>
 <br>
 <input type="button" name="add_server" value="+ <TMPL_VAR lang_add_new_server> " onClick="document.location='?op=admin_server_add'" style="width: 140px;">
 &nbsp;
-<input type="button" name="add_cdn" value="+ Add new CDN " onClick="document.location='?op=admin_server_add&cdn=1'" style="width: 140px;">
+<input type="button" name="add_cdn" value="+ <TMPL_VAR lang_add_cdn>" onClick="document.location='?op=admin_server_add&cdn=1'" style="width: 140px;">
 
 <br><br>
 </Form>
-<Form method="POST">
-<input type="hidden" name="op" value="admin_servers_transfer">
+<Form method="POST" name="transferForm" ng-app="TransferApp" ng-controller='TransferCtrl' ng-submit="startTransfer()">
+<input type="hidden" name="op" value="admin_servers">
+<input type="hidden" name="transfer_files" value="1">
 <input type="hidden" name="token" value="<TMPL_VAR token>">
 <Table name="transfer_files" class="tbl1 transfer_files" cellpadding=4 cellspacing=1 style="width: 300px">
-<TR class="hdr"><TD>Transfer Files</TD></TR>
+<TR class="hdr"><TD><TMPL_VAR lang_transfer_files></TD></TR>
 <TR><TD>
-From 
-<select name="srv_id1">
+<TMPL_VAR lang_transfer_source> 
+<select name="srv_id1" ng-model="transfer.src">
         <TMPL_LOOP servers>
         <TMPL_IF not_off><option value="<TMPL_VAR srv_id>"><TMPL_VAR srv_id> - <TMPL_VAR srv_name></option></TMPL_IF>
         </TMPL_LOOP>
+        <option style="display: none" ng-show="transfer.src_multiple" value="{{ transfer.src_multiple }}">Multiple</option>
+        <option ng-choose="serverChoiceDialog('transfer.src', dialog.src_servers, 'Select source servers')">Pick...</option>
 </select> 
-To 
-<select name="srv_id2">
+<TMPL_VAR lang_transfer_dest>
+<select name="srv_id2" ng-model="transfer.dst">
         <TMPL_LOOP servers>
         <TMPL_IF not_off><option value="<TMPL_VAR srv_id>"><TMPL_VAR srv_id> - <TMPL_VAR srv_name></option></TMPL_IF>
         </TMPL_LOOP>
+        <option style="display: none" ng-show="transfer.dst_multiple" value="{{ transfer.dst_multiple }}">Multiple</option>
+        <option ng-choose="serverChoiceDialog('transfer.dst', dialog.dst_servers, 'Select destination servers')">Pick...</option>
 </select>
 </TD></TR>
 <TR><TD>
-Number of files: <input type="text" name="files_num" size=5>
+<select name="limit_type" ng-model="limit_type" ng-init="limit_type='files_count'">
+	<option value="files_count"><TMPL_VAR lang_number_files></option>
+	<option value="total_size">Total size</option>
+	<option value="fill_up_to">Fill up to</option>
+</select>
+: <input type="text" name="limit_value" size=5>
+
+<select name="size_units" ng-show="limit_type == 'total_size'" ng-cloak>
+   <option value="mb">Mb</option>
+   <option value="gb">Gb</option>
+   <option value="tb">Tb</option>
+</select>
+
+<span ng-show="limit_type == 'fill_up_to'" ng-cloak>%</span>
 </TD></TR>
 <TR><TD>
-File Order: 
-<select name="order">
-<option value="size_desc">Biggest first</option>
-<option value="size_enc">Smallest first</option>
-<option value="id_desc">New first</option>
-<option value="id_enc">Old first</option>
+<TMPL_VAR lang_file_order>: 
+<select name="order" ng-model="transfer.order">
+	<option value="popular_enc">Hot first</option>
+	<option value="popular_desc">Cold first</option>
+	<option value="size_desc"><TMPL_VAR lang_biggest_first></option>
+	<option value="size_enc"><TMPL_VAR lang_smallest_first></option>
+	<option value="id_desc"><TMPL_VAR lang_new_first></option>
+	<option value="id_enc"><TMPL_VAR lang_old_first></option>
 </select>
 </TD></TR>
 <TR><TD>
-File downloads >= <input type="text" name="filter_downloads_more" size=3><br>
-File downloads < <input type="text" name="filter_downloads_less" size=3>
+<TMPL_VAR lang_file_downloads> >= <input type="text" name="filter_downloads_more" size=3><br>
+<TMPL_VAR lang_file_downloads> < <input type="text" name="filter_downloads_less" size=3>
 </TD></TR>
 <TR><TD align=center>
-<input type="submit" value="  Transfer  ">
+<input type="submit" value="  <TMPL_VAR lang_transfer>  ">
 </TD></TR>
 </Table>
 <style>.transfer_files td { text-align: center; }</style>
+
+<div id="srvSelect" class="modal fade" role="dialog" modal-show="showServerDialog" modal-dismiss="serverDialogSave()">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">{{ dialog.title }}</h4>
+      </div>
+      <div class="modal-body">
+         <button type="button" class="btn btn-default no-outline server-selector" ng-model="server.selected" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-repeat="server in dialog.servers" ng-class="{ inactive: dialog.counterpart[$index].selected }">{{server.srv_name}}</button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" ng-click="clearall()">Clear all</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<script>
+function confirmServerDeletion(redirect_url, srv_name)
+{
+   console.log(redirect_url);
+   var password = prompt("WARNING: you're going to delete the server \"s1\" along with all of it's files.\nPlease enter your admin password in order to confirm:");
+
+   if(password)
+   {
+      document.location = redirect_url + '&password=' + escape(password);
+   }
+
+   return false;
+}
+</script>
+
+<script>
+var app = angular.module('TransferApp', ['ui.bootstrap']);
+
+app.controller('TransferCtrl', function($scope, $location, $parse) {
+   $scope.transfer = {};
+   $scope.transfer.order = 'popular_enc';
+   $scope.transfer.src = $scope.transfer.dst = '3';
+
+   $scope.dialog = {};
+   $scope.dialog.src_servers = <TMPL_VAR servers_json>;
+   $scope.dialog.dst_servers = <TMPL_VAR servers_json>;
+
+   $scope.clearall = function() {
+      $scope.dialog.servers.forEach(function(e) { e.selected = false; });
+   }
+
+   $scope.serverChoiceDialog = function(dest_field, servers, title) {
+      $scope.dialog.dest_field = dest_field;
+      $scope.dialog.title = title;
+      $scope.dialog.servers = servers;
+      $scope.dialog.counterpart = servers === $scope.dialog.src_servers
+         ? $scope.dialog.dst_servers
+         : $scope.dialog.src_servers;
+      $scope.showServerDialog = true;
+   }
+
+   $scope.serverDialogSave = function() {
+      var servers = $scope.dialog.servers.filter(function(e) { return e.selected });
+      if(servers.length == 0) {
+         return;
+      } else if(servers.length == 1) {
+         $parse($scope.dialog.dest_field).assign($scope, servers[0].srv_id);
+      } else {
+         var srv_ids = servers.map(function(e) { return e.srv_id.toString() }).join(',');
+
+	      $parse($scope.dialog.dest_field + "_multiple").assign($scope, srv_ids); // prepare <option> tag
+	      $parse($scope.dialog.dest_field).assign($scope, srv_ids); // assign actual value
+	
+	      if(!$scope.$$phase && !$scope.$root.$$phase)
+	         $scope.$apply();
+      }
+   }
+
+   $scope.startTransfer = function() {
+      document.forms.transferForm.submit();
+   }
+});
+</script>
+<script src="<TMPL_VAR site_url>/js/angular-modal.js"></script>
+<script src="<TMPL_VAR site_url>/js/angular-choose.js"></script>
+<style>
+.no-outline { outline: none !important }
+.server-selector { margin: 5px }
+.inactive { opacity: 0.4; pointer-events: none; }
+</style>
+</Form>
