--- a/Templates/admin_sites.html
+++ b/Templates/admin_sites.html
@@ -7,18 +7,24 @@
 	<td align="center">Created</td>
 	<td></td>
 </tr>
+<TMPL_IF list>
 <TMPL_LOOP list>
 	<tr>
 		<td align="center"><a href="<TMPL_VAR site_url>/?op=admin_user_edit&usr_id=<TMPL_VAR usr_id>"><TMPL_VAR usr_login></a></td>
 		<td><a href="http://<TMPL_VAR domain>"><TMPL_VAR domain></a></td>
 		<td align="center"><TMPL_VAR created></td>
 		<td width="1" nowrap>
-			<a href="?op=admin_sites&delete=1&domain=<TMPL_VAR domain>" onClick="return confirm('Do you really want to delete that domain?','')" border=0>
+			<a href="?op=admin_sites&delete=1&domain=<TMPL_VAR domain>&token=<TMPL_VAR token>" onClick="return confirm('Do you really want to delete that domain?','')" border=0>
 				<img src="<TMPL_VAR site_url>/images/icon_delete.png" border=0></a>
 			</a>
 		</td>
 	</tr>
 </TMPL_LOOP>
+<TMPL_ELSE>
+   <tr>
+      <td colspan="4" align="center">No approved sites yet</td>
+   </tr>
+</TMPL_IF>
 </table>
 <br><br>
 <TMPL_VAR paging>
